# eelu-login

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: aur-release.yml  crates-releae.yml  mirror.yml
sis-login/: Cargo.toml
sis-login/src/: lib.rs
sis-login/src/sis/: utils.rs
sis-login/src/sis/types/: sis_response.rs
src/: main.rs
src/cli/: arg_parser.rs  cli_session.rs
