[package]
name = "eelu-login"
version = "0.2.0"
edition = "2021"
authors = ["Eslam Muhammad <0xCrypt00o@protonmail.com>", "Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "EELU Moodle Login University moodle-login through sis system"
repository = "https://github.com/anas-elgarhy/eelu-login"
license = "MIT OR Apache-2.0"
keywords = ["eelu", "EELU", "eelu-moodle", "moodle", "sis"]
homepage = "https://github.com/anas-elgarhy/eelu-login/README.md"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "LICENSE-apache",
]
exclude = [
    "tests/**/*",
    "examples/**/*",
    "docs/**/*"
]

[dependencies]
sis-login = "0.2.3"
tokio = "1.27.0"
open = "4.0.1"

[workspace]
members = [
    "sis-login"
]
