[package]
name = "eelu-login"
version = "0.3.1"
edition = "2021"
authors = ["Eslam Muhammad <0xCrypt00o@protonmail.com>", "Anas Elgarhy <anas.elgarhy.dev@gmail.com>"]
description = "EELU Moodle Login University moodle-login through sis system"
repository = "https://github.com/anas-elgarhy/eelu-login"
license = "MIT OR Apache-2.0"
keywords = ["eelu", "EELU", "eelu-moodle", "moodle", "sis"]
homepage = "https://github.com/anas-elgarhy/eelu-login/README.md"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "LICENSE-apache",
]
exclude = [
    "tests/**/*",
    "examples/**/*",
    "docs/**/*"
]

[dependencies]
sis-login = "0.2.5"
tokio = "1"
open = "5"

[workspace]
members = [
    "sis-login"
]
